--- a/Benchmark.Dotnet/Benchmark.Dotnet.csproj
+++ b/Benchmark.Dotnet/Benchmark.Dotnet.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="Mapster" Version="7.0.1" />
+    <PackageReference Include="NetMQ" Version="4.0.1.6" />
   </ItemGroup>
 
 </Project>
